--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- navigation -->
         <header>
             <h1>
-                <a href="/">RUN BUDDY</a>
+               <a href="/">RUN BUDDY</a>
             </h1>
             <nav>
                 <!-- Unordered list element -->
@@ -58,7 +58,13 @@
 
         <!-- footer -->
         <footer>
-            <h2>❤️ Made with love by Run Buddy.</h2>
+            <h2>
+                <div>
+                    <a href='#'>Read Our Privacy Policy</a><br />
+                    &copy; 2019 Run Buddy, Inc.
+                </div>
+                ❤️ Made with love by Run Buddy.
+            </h2>
         </footer>
     </body>
 </html>
