--- a/index.html
+++ b/index.html
@@ -107,8 +107,43 @@
         </section>
 
         <!-- "meet the trainers" sction -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+            <!-- first trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos possimus, temporibus quod doloremque omnis repellendus, corrupti reiciendis eum accusantium officiis unde libero ducimus ipsa aliquam rerum id ipsam, animi perferendis.
+                    </p>
+                </div>
+            <!-- second trainer bio -->
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, veniam eveniet ullam adipisci vel fugiat amet atque placeat quod fuga porro facere iste reiciendis nam architecto animi iusto magnam molestias!
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <!-- third trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates provident autem ex sequi velit voluptatem molestias eaque, magni at corrupti doloribus quo ea iusto officiis nemo cumque possimus nulla quia?
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section -->
