--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
         </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">
+                Reach Out
+            </h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.928880949393!2d-118.33986818443418!3d34.04569538060779!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b8f88b43ef7f%3A0x4770f06c2c6fc9bb!2s1625%20Vineyard%20Ave%2C%20Los%20Angeles%2C%20CA%2090019!5e0!3m2!1sen!2sus!4v1596700220529!5m2!1sen!2sus" 
                 width="400" 
