--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                     Commodi harum a animi iusto accusantium temporibus cumque 
+                     eveniet, totam, nesciunt nisi eligendi laborum, deleniti
+                      labore ratione quia perferendis corrupti deserunt cum.
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
