--- a/index.html
+++ b/index.html
@@ -166,8 +166,20 @@
                     frameborder="0" 
                     style="border:0;" 
                     allowfullscreen
-                     >
+                    >
                     </iframe>
+                </div>
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                        <label for="contact name">Your name</label>
+                        <input type="text" id="contact-name" placeholder="Your Name" />
+
+                        <label for="contact-message">Message</label>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
+
+                        <button type="submit">Submit</button>
+                    </form>
                 </div>
                 <div>
                     <h3>Run Buddy</h3>
