--- a/index.html
+++ b/index.html
@@ -174,10 +174,15 @@
             <div class="trainers">
                 <!-- first trainer bio -->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-img trainer-1">
+                        <div>
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Arron Stephens</h3>
-                        <h4 class="trainer-role">Speed / Strength</h4>
+                            <h3>Arron Stephens</h3>
+                            <h4>Speed / Strength</h4>
                         <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos possimus, temporibus quod doloremque omnis repellendus, corrupti reiciendis eum accusantium officiis unde libero ducimus ipsa aliquam rerum id ipsam, animi perferendis.
                         </p>
@@ -185,10 +190,15 @@
                 </article>
                  <!-- second trainer bio -->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                    <div class="trainer-img trainer-2">
+                        <div>
+                            <h3>Joanna Gill</h3>
+                            <h4>Endurance</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Joanna Gill</h3>
-                        <h4 class="trainer-role">Endurance</h4>
+                        <h3>Joanna Gill</h3>
+                        <h4>Endurance</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, veniam eveniet ullam adipisci vel fugiat amet atque placeat quod fuga porro facere iste reiciendis nam architecto animi iusto magnam molestias!
                         </p>
@@ -196,10 +206,15 @@
                 </article>
                 <!-- third trainer bio -->
                 <article class="trainer">
-                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                    <div class="trainer-img trainer-3">
+                        <div>
+                            <h3>Harry "the Headband" Smith</h3>
+                            <h4>Strength</h4>
+                        </div>
+                    </div>
                     <div class="trainer-bio">
-                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
-                        <h4 class="trainer-role">Strength</h4>
+                        <h3>Harry "the Headband" Smith</h3>
+                        <h4>Strength</h4>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates provident autem ex sequi velit voluptatem molestias eaque, magni at corrupti doloribus quo ea iusto officiis nemo cumque possimus nulla quia?
                         </p>
